Partial migration to static file site

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
   <title>About SuccessWhale</title>
-  <link rel="stylesheet" href="css/normalize.css"/>
-  <link rel="stylesheet" href="css/style-staticpage.css"/>
-  <link rel="stylesheet" href="css/font-awesome.min.css"/>
-  <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
+  <link rel="stylesheet" href="/css/normalize.css"/>
+  <link rel="stylesheet" href="/css/style-staticpage.css"/>
+  <link rel="stylesheet" href="/css/font-awesome.min.css"/>
+  <link rel="icon" href="/img/favicon.ico" type="image/x-icon"/>
+  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
   <div id="header">
@@ -18,7 +18,7 @@
     <h2>About SuccessWhale</h2>
   </div>
   <div id="main">
-    <img style="float:right; width:30%;" src="img/logo/successwhale.png" title="SuccessWhale logo" alt="SuccessWhale logo"/>
+    <img style="float:right; width:30%;" src="/img/logo/successwhale.png" title="SuccessWhale logo" alt="SuccessWhale logo"/>
     <h2>What is SuccessWhale?</h2>
     <p>SuccessWhale is a multi-column, web-based Twitter and Facebook client.</p>
     <p>Within its interface you can set up as many different columns as you like, pulling feeds in customisable ways from the various Twitter and Facebook accounts that you have connected to SuccessWhale. For example, you could have a column that combines two Twitter lists from two different users, or one that combines Twitter mentions and Facebook notifications from across all your accounts.</p>
@@ -38,17 +38,17 @@
     </ul>
     <h2>What does it look like?</h2>
     <p>This is the main interface of SuccessWhale:</p>
-    <p style="text-align:center;"><img style="width:80%;border:3px solid #eeeeee;" src="img/about/mainscreen.png" title="SuccessWhale main interface" alt="SuccessWhale main interface" /></p>
+    <p style="text-align:center;"><img style="width:80%;border:3px solid #eeeeee;" src="/img/about/mainscreen.png" title="SuccessWhale main interface" alt="SuccessWhale main interface" /></p>
     <p>Each item on display comes with its own buttons for interacting with it, such as replying and retweeting. You can also view a conversation inline by clicking on the <i class="fa fa-comments"></i> button.</p>
-    <p style="text-align:center;"><img style="border:3px solid #eeeeee;" src="img/about/inlinethread.png" title="Conversation view" alt="Conversation view" /></p>
+    <p style="text-align:center;"><img style="border:3px solid #eeeeee;" src="/img/about/inlinethread.png" title="Conversation view" alt="Conversation view" /></p>
     <p>Along the top of the screen are the areas for posting a new status update, including attaching pictures, and choosing which accounts the status update will be posted to:
-    <p style="text-align:center;"><img style="width:60%;vertical-align:text-top;margin-right:3%;border:3px solid #eeeeee;" src="img/about/attach.png" title="File attachment" alt="File attachment" /> <img style="width:30%;vertical-align:text-top;border:3px solid #eeeeee;" src="img/about/posttoaccounts.png" title="Account selector" alt="Account selector" /></p>
+    <p style="text-align:center;"><img style="width:60%;vertical-align:text-top;margin-right:3%;border:3px solid #eeeeee;" src="/img/about/attach.png" title="File attachment" alt="File attachment" /> <img style="width:30%;vertical-align:text-top;border:3px solid #eeeeee;" src="/img/about/posttoaccounts.png" title="Account selector" alt="Account selector" /></p>
     <p>On the Config page, you can find controls for managing the accounts you have linked with SuccessWhale, and you can add, delete, re-order and mix up your columns however you like:
-    <p style="text-align:center;"><img style="vertical-align:text-top;margin-right:3%;border:3px solid #eeeeee;" src="img/about/accounts.png" title="Account management" alt="Account management" /> <img style="vertical-align:text-top;border:3px solid #eeeeee;" src="img/about/feedmixing.png" title="Mixing feeds to create a column" alt="Mixing feeds to create a column" /></p>
+    <p style="text-align:center;"><img style="vertical-align:text-top;margin-right:3%;border:3px solid #eeeeee;" src="/img/about/accounts.png" title="Account management" alt="Account management" /> <img style="vertical-align:text-top;border:3px solid #eeeeee;" src="/img/about/feedmixing.png" title="Mixing feeds to create a column" alt="Mixing feeds to create a column" /></p>
     <p>SuccessWhale has a mobile interface too &mdash; just go to the same site as normal on your phone. On small screens, buttons will shrink and a swipe gesture allows you to navigate left and right across your columns. The mobile site otherwise looks just the same as the desktop one:</p>
-    <p style="text-align:center;"><img style="vertical-align:text-top;margin-right:3%;border:3px solid #eeeeee;" src="img/about/mobilescreen.png" title="Account management" alt="Account management" /></p>
+    <p style="text-align:center;"><img style="vertical-align:text-top;margin-right:3%;border:3px solid #eeeeee;" src="/img/about/mobilescreen.png" title="Account management" alt="Account management" /></p>
     <h2>How do I get started?</h2>
-    <img style="float:right; width:40%;border:3px solid #eeeeee;" src="img/about/loginboxes.png" title="Login boxes" alt="Login boxes"/>
+    <img style="float:right; width:40%;border:3px solid #eeeeee;" src="/img/about/loginboxes.png" title="Login boxes" alt="Login boxes"/>
     <p>To get started, simply sign in using one of your Twitter or Facebook accounts using the buttons on the login page. SuccessWhale will automatically set up some columns for you.</p>
     <p>If you only have one account, you're good to go!</p>
     <p>If you have more, visit the Config page using the button at the top right. From there you can add more Twitter and Facebook accounts. Each time you add one it'll create some example columns for you, so once you've added a few accounts you probably want to stay on the Config page and set the columns up just the way you like them.</p>
