--- a/public/client/index.html
+++ b/public/client/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
   <title>SuccessWhale</title>
   <meta name="description" content="SuccessWhale is a multi-column client for Twitter and Facebook that allows you to mix and match feeds however you like!"/>
-  <link rel="stylesheet" href="css/normalize.css"/>
-  <link rel="stylesheet" href="css/style.css"/>
-  <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="stylesheet" data-bind="attr: { href: 'css/themes/'+theme()+'.css' }"/>
-  <link rel="stylesheet" href="css/jquery.gpopover.css"/>
-  <link rel="stylesheet" href="js/libs/fancybox/jquery.fancybox.css?v=2.1.5" />
-  <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
+  <link rel="stylesheet" href="/css/normalize.css"/>
+  <link rel="stylesheet" href="/css/style.css"/>
+  <link rel="stylesheet" href="/css/font-awesome.min.css">
+  <link rel="stylesheet" data-bind="attr: { href: '/css/themes/'+theme()+'.css' }"/>
+  <link rel="stylesheet" href="/css/jquery.gpopover.css"/>
+  <link rel="stylesheet" href="/js/libs/fancybox/jquery.fancybox.css?v=2.1.5" />
+  <link rel="icon" href="/img/favicon.ico" type="image/x-icon"/>
+  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon"/>
 </head>
 <body class="loading">
   <div id="successbox"></div>
@@ -20,7 +20,7 @@
   <div id="header">
     <form id="postform" method="post">
       <div id="topmenu">
-        <a id="configbutton" class="button topmenuitem" href="/config"><i class="fa fa-gear"></i><span class="buttontext"> Config</span></a>
+        <a id="configbutton" class="button topmenuitem" href="/config/"><i class="fa fa-gear"></i><span class="buttontext"> Config</span></a>
         <a id="logoutbutton" class="button topmenuitem" href="#"><i class="fa fa-power-off"></i><span class="buttontext"> Exit</span></a>
       </div>
       <input id="token" name="token" type="hidden" data-bind="value: token"/>
@@ -190,19 +190,19 @@
   </div>
   <div class="modal"></div>
     
-  <script src="js/libs/cookies.js"></script>
-  <script src="js/libs/xdr.js"></script>
-  <script src="js/libs/jquery-1.9.1.js"></script>
-  <script src="js/libs/knockout-3.2.0.js"></script>
-  <script src="js/libs/moment.min.js"></script>
-  <script src="js/libs/twitter-entities.js"></script>
-  <script src="js/libs/jquery.gpopover.js"></script>
-  <script src="js/libs/jquery.autosize.min.js"></script>
-  <script src="js/libs/jquery.form.min.js"></script>
-  <script src="js/libs/jquery.touchSwipe.min.js"></script>
-  <script src="js/libs/fancybox/jquery.fancybox.pack.js?v=2.1.5"></script>
-  <script src="js/common.js"></script>
-  <script src="js/successwhale.js"></script>
+  <script src="/js/libs/cookies.js"></script>
+  <script src="/js/libs/xdr.js"></script>
+  <script src="/js/libs/jquery-1.9.1.js"></script>
+  <script src="/js/libs/knockout-3.2.0.js"></script>
+  <script src="/js/libs/moment.min.js"></script>
+  <script src="/js/libs/twitter-entities.js"></script>
+  <script src="/js/libs/jquery.gpopover.js"></script>
+  <script src="/js/libs/jquery.autosize.min.js"></script>
+  <script src="/js/libs/jquery.form.min.js"></script>
+  <script src="/js/libs/jquery.touchSwipe.min.js"></script>
+  <script src="/js/libs/fancybox/jquery.fancybox.pack.js?v=2.1.5"></script>
+  <script src="/js/common.js"></script>
+  <script src="/js/successwhale.js"></script>
 
 </body>
 </html>
