--- a/public/whatsnew/index.html
+++ b/public/whatsnew/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
   <title>What's New in SuccessWhale?</title>
-  <link rel="stylesheet" href="css/normalize.css"/>
-  <link rel="stylesheet" href="css/style-staticpage.css"/>
-  <link rel="stylesheet" href="css/font-awesome.min.css"/>
-  <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
+  <link rel="stylesheet" href="/css/normalize.css"/>
+  <link rel="stylesheet" href="/css/style-staticpage.css"/>
+  <link rel="stylesheet" href="/css/font-awesome.min.css"/>
+  <link rel="icon" href="/img/favicon.ico" type="image/x-icon"/>
+  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
   <div id="header">
@@ -18,20 +18,20 @@
     <h2>What's New in SuccessWhale v3.0</h2>
   </div>
   <div id="main">
-    <img style="float:right; width:30%;" src="img/logo/successwhale.png" title="SuccessWhale logo" alt="SuccessWhale logo"/>
+    <img style="float:right; width:30%;" src="/img/logo/successwhale.png" title="SuccessWhale logo" alt="SuccessWhale logo"/>
     <p>SuccessWhale version 3 is a complete rewrite of the original SuccessWhale v1/v2 software. Instead of a horrible mash of HTML rendering functions inside PHP scripts, SuccessWhale v3 is neatly separated into a pure Javascript web interface and a Ruby API, which communicate using JSON. If that's too many abbreviations for this time of the morning, don't worry &mdash; all you need to know is that it's designed <em>better</em>.</p>
     <p>There have been a few changes to what you'll see in the web interface. Hopefully you'll agree that they are improvements!</p>
     <h2>The Main Screen</h2>
     <p>The main screen of SuccessWhale works much the same as before: post entry box and buttons on top, configurable columns of all your feeds below.</p>
     <p>Up top, you can now attach files such as pictures and videos to your posts by clicking the <i class="fa fa-paperclip"></i> icon. You'll also notice that the "Post to:" buttons have been moved &mdash; they can be found by clicking on the <span style="display:inline-block;border:2px solid black;padding:3px;"><i class="fa fa-th-list"></i> Accounts</span> button.</p>
-    <p style="text-align:center;"><img style="width:60%;vertical-align:text-top;margin-right:3%;border:3px solid #eeeeee;" src="img/about/attach.png" title="File attachment" alt="File attachment" /> <img style="width:30%;vertical-align:text-top;border:3px solid #eeeeee;" src="img/about/posttoaccounts.png" title="Account selector" alt="Account selector" /></p>
+    <p style="text-align:center;"><img style="width:60%;vertical-align:text-top;margin-right:3%;border:3px solid #eeeeee;" src="/img/about/attach.png" title="File attachment" alt="File attachment" /> <img style="width:30%;vertical-align:text-top;border:3px solid #eeeeee;" src="/img/about/posttoaccounts.png" title="Account selector" alt="Account selector" /></p>
     <p>In the main area of the interface, usability has been improved by displaying the action buttons for each item underneath the item, rather than hiding them away behind a click of the user's avatar. Conversations (<i class="fa fa-comments"></i>) and reply entry boxes (<i class="fa fa-reply"></i>) now appear inline underneath each item when you click the appropriate button. Plus, pictures can now be previewed inline rather than having to be opened by clicking a text link. (If you prefer the old behaviour, you can turn this off on the Config screen.)</p>
-    <p style="text-align:center;"><img style="vertical-align:text-top;margin-right:3%;border:3px solid #eeeeee;" src="img/about/inlinethread.png" title="Conversation view" alt="Conversation view" /><img style="vertical-align:text-top;margin-right:3%;border:3px solid #eeeeee;" src="img/about/inlinemediareply.png" title="Inline media and reply" alt="Inline media and reply" /></p>
+    <p style="text-align:center;"><img style="vertical-align:text-top;margin-right:3%;border:3px solid #eeeeee;" src="/img/about/inlinethread.png" title="Conversation view" alt="Conversation view" /><img style="vertical-align:text-top;margin-right:3%;border:3px solid #eeeeee;" src="/img/about/inlinemediareply.png" title="Inline media and reply" alt="Inline media and reply" /></p>
     <h2>The Config Screen</h2>
     <p>All the old configuration areas &mdash; Accounts, Appearance, Banned Phrases and each column's individual feed selection &mdash; have all been moved to one place, accessible by the <span style="display:inline-block;border:2px solid black;padding:3px;"><i class="fa fa-gear"></i> Config</span> button at the top right:</p>
-    <p style="text-align:center;"><img style="width:80%;border:3px solid #eeeeee;" src="img/about/config.png" title="SuccessWhale config interface" alt="SuccessWhale config interface" /></p>
+    <p style="text-align:center;"><img style="width:80%;border:3px solid #eeeeee;" src="/img/about/config.png" title="SuccessWhale config interface" alt="SuccessWhale config interface" /></p>
     <p>Rather than a limited set of suggestions for mixing feeds together, you can now add and remove any feeds you like in any column you like. Sources can be added to columns with the <i class="fa fa-arrow-right"></i> button and removed with <i class="fa fa-arrow-left"></i>. Columns can also be moved around by grabbing hold of the <i class="fa fa-arrows"></i> icon and dragging each column's box up and down.</p>
-    <p style="text-align:center;"><img style="vertical-align:text-top;border:3px solid #eeeeee;" src="img/about/feedmixing.png" title="Mixing feeds to create a column" alt="Mixing feeds to create a column" /></p>
+    <p style="text-align:center;"><img style="vertical-align:text-top;border:3px solid #eeeeee;" src="/img/about/feedmixing.png" title="Mixing feeds to create a column" alt="Mixing feeds to create a column" /></p>
     <p>That's it! I hope you enjoy using SuccessWhale as much as &mdash; hopefully more than! &mdash; I enjoyed making it.</p>
     <p><em>&mdash; Ian</em></p>
   </div>
