--- a/public/index.html
+++ b/public/index.html
@@ -5,28 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <title>Log In to SuccessWhale</title>
     <meta name="description" content="SuccessWhale is a multi-column client for Twitter and Facebook that allows you to mix and match feeds however you like!"/>
-    <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/style-login.css"/>
-    <link rel="stylesheet" href="css/font-awesome.min.css"/>
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="/css/normalize.css"/>
+    <link rel="stylesheet" href="/css/style-login.css"/>
+    <link rel="stylesheet" href="/css/font-awesome.min.css"/>
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon"/>
   </head>
 <body>
   <div id="firefoxinstallheader" class="headerbar">
-    <p>You can install SuccessWhale on this device! <a href="#" id="firefoxinstalllink">Click here to install.</a> <img class="spinner" src="img/loading-small.gif" /></p>
+    <p>You can install SuccessWhale on this device! <a href="#" id="firefoxinstalllink">Click here to install.</a> <img class="spinner" src="/img/loading-small.gif" /></p>
   </div>
   <div id="part1">
     <div id="logodiv">
-      <img id="logo" src="img/logo/successwhale.png"/>
+      <img id="logo" src="/img/logo/successwhale.png"/>
       <h1>Welcome to SuccessWhale!</h1>
     </div>
     <div id="intro">
       <p>SuccessWhale is a multi-column client for Twitter and Facebook that allows you to mix and match feeds however you like!</p>
       <p class="readmore">
-        <a href="/about">Read more &raquo;</a>
+        <a href="/about/">Read more &raquo;</a>
       </p>
       <p class="readmore">
-        <a href="/whatsnew">What's new in v3.0 &raquo;</a>
+        <a href="/whatsnew/">What's new in v3.0 &raquo;</a>
+      </p>
+      <p class="readmore">
+        <a href="/facebookinfo/">What's new in v3.0 &raquo;</a>
       </p>
     </div>
   </div>
@@ -37,7 +40,7 @@
       </div>
       <div class="content">
         <p>Start with one account &mdash; you can add others once you're in.</p>
-        <p class="authbuttons"><a id="authwithtwitter" class="button serviceauth" href="#"><i class="fa fa-twitter"></i> Log in with Twitter <img class="spinner" src="img/loading-small.gif" /></a>&nbsp;&nbsp;&nbsp;<a id="authwithfacebook"  class="button serviceauth" href="#"><i class="fa fa-facebook"></i> Log in with Facebook <img class="spinner" src="img/loading-small.gif" /></a></p>
+        <p class="authbuttons"><a id="authwithtwitter" class="button serviceauth" href="#"><i class="fa fa-twitter"></i> Log in with Twitter <img class="spinner" src="/img/loading-small.gif" /></a>&nbsp;&nbsp;&nbsp;<a id="authwithfacebook"  class="button serviceauth" href="#"><i class="fa fa-facebook"></i> Log in with Facebook <img class="spinner" src="/img/loading-small.gif" /></a></p>
       </div>
     </form>
     <form id="login">
@@ -57,20 +60,20 @@
         <img src="/img/loading.gif"/>
         <p>Contacting secure server...</p>
       </div>
-      <p>Client version 3.0.6</p>
+      <p>Client version 3.0.7</p>
     </div>
   </div>
   <div id="footer">
-    <a href="https://twitter.com/successwhaleapp">Follow us @SuccessWhaleApp</a> | <a href="/about">About</a> | <a href="/whatsnew">What's New</a> | <a href="/privacy">Privacy & Security</a> | <a href="https://github.com/ianrenton/SuccessWhale/blob/master/LICENCE.md">BSD-licenced Open Source</a> software | Written by <a href="http://ianrenton.com">Ian Renton</a>
+    <a href="https://twitter.com/successwhaleapp">Follow us @SuccessWhaleApp</a> | <a href="/about/">About</a> | <a href="/whatsnew">What's New</a> | <a href="/privacy/">Privacy & Security</a> | <a href="https://github.com/ianrenton/SuccessWhale/blob/master/LICENCE.md">BSD-licenced Open Source</a> software | Written by <a href="http://ianrenton.com">Ian Renton</a>
   </div>
   
   <a href="https://github.com/ianrenton/SuccessWhale"><img class="github" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
-  <script src="js/libs/cookies.js"></script>
-  <script src="js/libs/jquery-1.9.1.js"></script>
-  <script src="js/libs/knockout-3.2.0.js"></script>
-  <script src="js/common.js"></script>
-  <script src="js/successwhale-login.js"></script>
+  <script src="/js/libs/cookies.js"></script>
+  <script src="/js/libs/jquery-1.9.1.js"></script>
+  <script src="/js/libs/knockout-3.2.0.js"></script>
+  <script src="/js/common.js"></script>
+  <script src="/js/successwhale-login.js"></script>
   
   <noscript>
     <div class="modal"><div class="notice">
