--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         <a href="/whatsnew/">What's new in v3.0 &raquo;</a>
       </p>
       <p class="readmore">
-        <a href="/facebookinfo/">What's new in v3.0 &raquo;</a>
+        <a href="/facebookinfo/" class="important">Important: Facebook Support Discontinued &raquo;</a>
       </p>
     </div>
   </div>
